# cotrl

./: .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pyrightconfig.json  render.yaml  requirements-web.txt  requirements.txt
.github/workflows/: ci.yml
docker/: hf.Dockerfile  inference.Dockerfile  training.Dockerfile  web.Dockerfile
docs/adr/: 001-use-qwen-7b-over-llama3.md  002-implement-grpo-instead-of-ppo.md  003-shaped-rewards-for-grpo.md
docs/sprints/: sprint-01-baseline.md  sprint-02-verifier.md  sprint-03-mcts.md  sprint-04-rl-training.md
docs/tutorial/: 00-what-is-game-of-24.md  01-architecture.md  02-verifier.md  03-puzzle-data.md  04-llm-and-cot.md  05-mcts.md  06-rl-training.md  07-running.md  README.md
frontend/: app.js  index.html  style.css
notebooks/: 01_eda_puzzle_distribution.ipynb  02_rl_training_dynamics.ipynb
results/: strategy_comparison.json
scripts/: compare_strategies.py  evaluate.py  generate_dataset.py  run_baseline.py  train_rl.py
src/api/: app.py  solver.py
src/data/: __init__.py  puzzles.py
src/eval/: __init__.py  metrics.py
src/llm/: __init__.py  few_shot.py  generator.py  prompts.py
src/reasoning/: __init__.py  llm_rollout.py  mcts.py  tree_of_thoughts.py
src/rl/: __init__.py  rewards.py  trainer.py  trajectory.py
src/verifier/: __init__.py  core.py
tests/: test_data.py  test_few_shot.py  test_integration.py  test_llm_rollout.py  test_mcts.py  test_rewards.py  test_trajectory.py  test_tree_of_thoughts.py  test_verifier.py
